; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lzma/C/extr_Ppmd7Enc.c_Ppmd7z_RangeEnc_FlushData.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lzma/C/extr_Ppmd7Enc.c_Ppmd7z_RangeEnc_FlushData.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Ppmd7z_RangeEnc_FlushData(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %10, %1
  %5 = load i32, i32* %3, align 4
  %6 = icmp ult i32 %5, 5
  br i1 %6, label %7, label %13

7:                                                ; preds = %4
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @RangeEnc_ShiftLow(i32* %8)
  br label %10

10:                                               ; preds = %7
  %11 = load i32, i32* %3, align 4
  %12 = add i32 %11, 1
  store i32 %12, i32* %3, align 4
  br label %4

13:                                               ; preds = %4
  ret void
}

declare dso_local i32 @RangeEnc_ShiftLow(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
